<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="report"
            type="com.sunflower.current_weather.CurrentWeatherReport" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@{report.locationName}"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="Stockholm" />

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/content_description_weather_image"
            android:src="@{report.icon}" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{report.weatherDescription}"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Sunny" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/temp_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/temperature" />

                    <ImageView
                        android:id="@+id/temp_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/temp_title"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/temperature_image"
                        android:src="@drawable/ic_temp" />

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/temp_icon"
                        android:layout_centerHorizontal="true"
                        android:text="@{report.temp}"
                        tools:text="25C" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/wind_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/wind_speed" />

                    <ImageView
                        android:id="@+id/wind_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/wind_title"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_wind"
                        android:contentDescription="@string/wind_speed_image" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wind_icon"
                        android:layout_centerHorizontal="true"
                        android:text="@{report.windSpeed}"
                        tools:text="5m/s" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/hum_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/humidity" />

                    <ImageView
                        android:id="@+id/hum_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/hum_title"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_humidity"
                        android:contentDescription="@string/humidity_image" />

                    <TextView
                        android:id="@+id/hum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/hum_icon"
                        android:layout_centerHorizontal="true"
                        android:text="@{report.humidity}"
                        tools:text="25C" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/daylight_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/daylight" />

                    <RelativeLayout
                        android:id="@+id/top_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/daylight_title">

                        <ImageView
                            android:id="@+id/sunrise_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_sunrise"
                            android:contentDescription="@string/sunrise_image" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/sunrise_icon"
                            android:text="@{report.sunrise}"
                            tools:text="07:00" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/top_row">

                        <ImageView
                            android:id="@+id/sunset_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_sunset"
                            android:contentDescription="@string/sunset_image" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/sunset_icon"
                            android:text="@{report.sunset}"
                            tools:text="20:00" />

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</layout>